# predict-inpainting

dev_hiertext/: .gitignore  clean_requirements.txt  create_mask_hiertext.py  create_mask_textocr.py  custom_trainer.py  dpo_trainer.py  generate_paraphrases.py  hiertext_dataset.py  inference_qwen_base.py  inference_qwen_hiertext.py  paper.tex  pyproject.toml  setup_env.sh  test_anytext.py  textocr_dataset.py  train_qwen_hiertext.py  venv_requirements.txt
dev_hiertext/agent/: __init__.py  agent.py  evaluator.py  font  generator.py  models.py  ocr_recog  qwen_eval_server.py  requirements.txt  run.py
dev_hiertext/docs/: ENVIRONMENT.md
dev_hiertext/scripts/: quick_fix.sh  reset_environment.sh
